--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -1,12 +1,12 @@
-name: Deploy to GitHub Pages
+name: Simple Deploy to GitHub Pages
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     permissions:
@@ -17,41 +17,41 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        
-    - name: Clean install dependencies
+
+    - name: Force clean install
       run: |
-        rm -f package-lock.json yarn.lock pnpm-lock.yaml
+        rm -rf node_modules package-lock.json yarn.lock pnpm-lock.yaml
         npm cache clean --force
-        npm install --legacy-peer-deps
-        
-    - name: Build for production
-      run: npm run build:client
+        npm install --force --legacy-peer-deps
+
+    - name: Build project
+      run: |
+        npm run build:client || npm run build
       env:
         NODE_ENV: production
-        
-    - name: List build output
+
+    - name: Verify build
       run: |
-        echo "=== Build output directory ==="
-        ls -la dist/public/ || echo "Build output directory not found"
-        find dist/ -type f -name "*.html" -o -name "*.js" -o -name "*.css" | head -10
+        echo "Checking build output..."
+        ls -la dist/public/ || ls -la dist/ || echo "No dist folder found"
         
     - name: Setup Pages
       uses: actions/configure-pages@v4
-      
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: './dist/public'
-        
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
