--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,10 @@ jobs:
       env:
         NODE_ENV: production
         
+    - name: Copy 404.html for GitHub Pages SPA
+      run: |
+        cp client/public/404.html dist/public/404.html || echo "404.html not found"
+        
     - name: List build output
       run: |
         echo "=== Build output directory ==="
