--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     permissions:
@@ -17,45 +17,79 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        
-    - name: Clean install dependencies
+
+    - name: Install dependencies
       run: |
-        rm -f package-lock.json yarn.lock pnpm-lock.yaml
-        npm cache clean --force
-        npm install --legacy-peer-deps
-        
-    - name: Build for production
-      run: npm run build:client
+        npm install --force --legacy-peer-deps
+
+    - name: Build application
+      run: |
+        npm run build:client
+        echo "Build completed, checking output..."
+        ls -la dist/public/
       env:
         NODE_ENV: production
-        
-    - name: Copy 404.html for GitHub Pages SPA
+
+    - name: Create 404.html for SPA routing
       run: |
-        cp client/public/404.html dist/public/404.html || echo "404.html not found"
-        
-    - name: List build output
+        cat > dist/public/404.html << 'EOF'
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+          <meta charset="utf-8">
+          <title>Property Management Pulse</title>
+          <script>
+            var pathSegmentsToKeep = 1;
+            var l = window.location;
+            l.replace(
+              l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+              l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+              l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+              (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+              l.hash
+            );
+          </script>
+        </head>
+        <body></body>
+        </html>
+        EOF
+
+    - name: Verify build output
       run: |
-        echo "=== Build output directory ==="
-        ls -la dist/public/ || echo "Build output directory not found"
-        find dist/ -type f -name "*.html" -o -name "*.js" -o -name "*.css" | head -10
+        echo "=== Checking required files ==="
+        if [ -f dist/public/index.html ]; then
+          echo "✅ index.html found"
+        else
+          echo "❌ index.html NOT found"
+          exit 1
+        fi
         
-    - name: Setup Pages
+        if [ -f dist/public/404.html ]; then
+          echo "✅ 404.html found"
+        else
+          echo "❌ 404.html NOT found"
+        fi
+        
+        echo "=== All files in dist/public ==="
+        find dist/public -type f | head -20
+
+    - name: Setup GitHub Pages
       uses: actions/configure-pages@v4
-      
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: './dist/public'
-        
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
